# digital-twin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
backend/: .env.example  .gitignore  README.md  conftest.py  context.py  deploy.py  lambda_handler.py  pyproject.toml  pytest.ini  requirements.txt  server.py
backend/app/: __init__.py  main.py  models.py
backend/app/api/: chat.py
backend/app/core/: __init__.py  auth.py  config.py  context.py  data_loader.py  logging.py  prompt_loader.py  rate_limiter.py  resources.py
backend/app/services/: __init__.py  ai_service.py  memory_service.py
backend/app/services/ai/: __init__.py  base.py  bedrock.py  ollama.py  openai.py
backend/app/services/memory/: __init__.py  base.py  local.py  s3.py  utils.py
backend/data/: experience_template.yml  qna_template.yml  sources_template.json
backend/data/personal_data_templates/: education_template.yml  experience_template.yml  facts_template.json  me_template.txt  qna_template.yml  skills_template.yml  sources_template.json  style_template.txt
backend/data/prompts/: README.md  __init__.py  critical_rules.txt  proficiency_levels.json  system_prompt.txt
backend/data/prompts_template/: critical_rules.txt  proficiency_levels.json  system_prompt.txt
backend/scripts/: generate_linkedin_template.py
backend/tests/: __init__.py  test_ai_service.py  test_api.py  test_data_loader.py  test_memory_service.py  test_rate_limiter.py
docs/: DEPLOYMENT.md  README.md
frontend/: AVATAR_SETUP.md  eslint.config.mjs  jest.config.ts  middleware.ts  next.config.ts  package.json  (+1 more)
(+35 files in other folders)
