[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.45",
    "fastapi>=0.118.0",
    "mangum>=0.19.0",
    "openai>=2.1.0",
    "pypdf>=6.1.1",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.32.0",
    "structlog>=24.2.0",
]
